 cnp-stig-postgresql-port-external-access-xrj8uf0.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-stig-postgresql-port-external-access-0dbymq3
  namespace: kube-system
spec:
  description: "This will Block PostgreSQL External Access"
  endpointSelector:
    matchLabels:
      controller-revision-hash: 5848cb99f
      k8s-app: cilium-gke-node-init
      pod-template-generation: 1
  ingress:
    - fromEntities:
        - cluster
    - fromCIDRSet:
        - cidr: 10.10.10.1/16    #change with your ip address
      toPorts:
        - ports:
            - port: "5432"
